--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -3,6 +3,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2.5rem;
+    justify-content: center;
 }
 
 .portfolio__item {
@@ -11,7 +12,7 @@
     border-radius: 2rem;
     border: 1.5rem solid transparent;
     transition: var(--transition);
-}
+    }
 
 .portfolio__item:hover{
     border: 0.1rem solid transparent;
@@ -22,9 +23,16 @@
     overflow: hidden;
 }
 
+.portfolio__item-image img{
+height: 300px;
+width: 350px;
+}
+
+
 
 .portfolio__item h3 {
     margin: 1.2rem 0 2rem;
+    
 }
 
 .portfolio__item-cta {
