--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
-
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
@@ -15,9 +14,9 @@
   --color-bg: #242424;
   --color-bg-variant: #02423d;
   --color-primary: #1fe880;
-  --color-primary-variant: rgba(247, 114, 189, 0.4);
-  --color-white:#fff;
-  --color-light: rgba(255,255,255,0.6);
+  --color-primary-variant: white;
+  --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.6);
 
   --transition: all 400ms ease;
 
@@ -26,66 +25,69 @@
   --container-width-sm: 90%;
 }
 
-html{
+html {
   scroll-behavior: smooth;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
-body{
-  font-family: 'Poppins', sans-serif;
+body {
+  font-family: "Poppins", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
   line-height: 1.7;
   background-image: url(../src/assets/bg-texture.png);
 }
 
- /* ========================== STYLES ====================== */
+/* ========================== STYLES ====================== */
 
- .container{
+.container {
   width: var(--container-width-lg);
   margin: 0 auto;
+}
 
- }
-
- h1, h2, h3,h4,h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-weight: 500;
- }
+}
 
- h1{
+h1 {
   font-size: 2.5rem;
- }
+}
 
- section {
+section {
   margin-top: 10rem;
- }
+}
 
- section > h2, 
- section > h5 {
+section > h2,
+section > h5 {
   text-align: center;
   color: var(--color-light);
- }
+}
 
- section > h2 {
+section > h2 {
   color: var(--color-primary);
- }
+}
 
- .text-light {
+.text-light {
   color: var(--color-light);
- }
+}
 
- a{
+a {
   color: var(--color-primary);
   transition: var(--transition);
- }
+}
 
- a:hover{
+a:hover {
   color: var(--color-white);
- }
+}
 
- .btn {
+.btn {
   width: max-content;
   display: inline-block;
   color: var(--color-primary);
@@ -94,44 +96,44 @@ body{
   cursor: pointer;
   border: 1px solid var(--color-primary);
   transition: var(--transition);
- }
+}
 
- .btn:hover{
+.btn:hover {
   background: var(--color-white);
   color: var(--color-bg);
   border-color: transparent;
- }
+}
 
- .btn-primary{
+.btn-primary {
   background: var(--color-primary);
   color: var(--color-bg);
- }
+}
 
- img {
+img {
   display: block;
   width: 100%;
   object-fit: cover;
- }
+}
 
-  /* ======================== TELA (APARELHOS MEDIOS) ==================== */
+/* ======================== TELA (APARELHOS MEDIOS) ==================== */
 
-  @media screen and (max-width: 1024px) {
-    .container {
-      width: var(--container-width-md);
-    }
-
-    section{
-      margin-top: 6rem;
-    }
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
   }
-  /* ======================== TELA (APARELHOS PEQUENOS) ==================== */
 
-  @media screen and (max-width: 600px) {
-    .container {
-      width: var(--container-width-sm);
-    }
-
-    section > h2{
-      margin-bottom: 2rem;
-    }
+  section {
+    margin-top: 6rem;
   }
+}
+/* ======================== TELA (APARELHOS PEQUENOS) ==================== */
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: var(--container-width-sm);
+  }
+
+  section > h2 {
+    margin-bottom: 2rem;
+  }
+}
